[package]
name = "rama-agent"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.0-gamma3" }
leptos_meta = { version = "0.7.0-gamma3" }
axum = { version = "0.7", optional = true }
leptos_router = { version = "0.7.0-gamma3" }
leptos_axum = { version = "0.7.0-gamma3", optional = true }
#
http = "1"
tower = { version = "0.5", optional = true, features = ["util"] }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
#
thiserror = "1"
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
tracing = { version = "0.1", optional = true }

[features]
devices = ["leptos/csr"]
web = ["leptos/hydrate"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "leptos/ssr",
    "dep:tracing",
    "dep:tower-http",
    "dep:leptos_axum",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 12
panic = "abort"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
codegen-units = 1

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "rama"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["server"]
bin-default-features = false
lib-features = ["web"]
lib-default-features = false
lib-profile-release = "wasm-release"
